added view logic

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
               <li><label><input type="checkbox" name="calories" id="calories100"><100</label></li>
             </ul>
           </div>
+          <div class="remove-filters">Сбросить всё</div>
         </div>
       </div>
     </aside>
@@ -91,7 +92,7 @@
         <div class="item">
           <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
           <p class="item__name">Прошурро</p>
-          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
+          <p class="item__ingredients">тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
           <p class="item__calories">445 калорий</p>
           <p class="item__price">458 ₴</p>
         </div>
@@ -129,10 +130,12 @@
     </footer>
   </div>
 
-  <div class="layout-menu">
-    <p class="layout-menu--offer">Привет! Как ты хочешь нас видеть 🍕?</p>
-    <div class="layout-menu__option">Табличкой</div>
-    <div class="layout-menu__option">Списком</div>
+  <div class="layout-menu__container">
+    <div class="layout-menu">
+      <h1 class="layout-menu--offer">Привет! Как ты хочешь нас видеть 🍕?</h1>
+      <div class="layout-menu__option layout-menu__option-table">Табличкой</div>
+      <div class="layout-menu__option layout-menu__option-list">Списком</div>
+    </div>
   </div>
 </div>
 <script src="js/content.js" defer></script>
