--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <p class="filter__calories--describe">Ингредиенты:</p>
             <ul>
               <li><label><input type="checkbox" name="ingredients" id="fish">Рыба</label></li>
+              <li><label><input type="checkbox" name="ingredients" id="mushrooms">Грибы</label></li>
               <li><label><input type="checkbox" name="ingredients" id="tomatoes">Помидоры</label></li>
               <li><label><input type="checkbox" name="ingredients" id="asparagus">Спаржа</label></li>
               <li><label><input type="checkbox" name="ingredients" id="mozzarella">Моцарелла</label></li>
@@ -130,13 +131,13 @@
     </footer>
   </div>
 
-  <div class="layout-menu__container">
-    <div class="layout-menu">
-      <h1 class="layout-menu--offer">Привет! Как ты хочешь нас видеть 🍕?</h1>
-      <div class="layout-menu__option layout-menu__option-table">Табличкой</div>
-      <div class="layout-menu__option layout-menu__option-list">Списком</div>
-    </div>
-  </div>
+<!--  <div class="layout-menu__container">-->
+<!--    <div class="layout-menu">-->
+<!--      <h1 class="layout-menu&#45;&#45;offer">Привет! Как ты хочешь нас видеть 🍕?</h1>-->
+<!--      <div class="layout-menu__option layout-menu__option-table">Табличкой</div>-->
+<!--      <div class="layout-menu__option layout-menu__option-list">Списком</div>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
 <script src="js/content.js" defer></script>
 <script src="js/page-components.js" defer></script>
