--- a/index.main.html
+++ b/index.main.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <script src="js/content.js" defer></script>
+<script src="js/preferences.js" defer></script>
 <script src="js/page-components.js" defer></script>
 <script src="js/site-builder.js" defer></script>
 <script src="js/ingredients.js" defer></script>
