--- a/index.html
+++ b/index.html
@@ -66,47 +66,50 @@
     </aside>
     
     <main>
-      <div class="items-wrapper--list">
-        <div class="item">
-          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">
-          <div class="item__name">Прошурро</div>
-          <div class="item__price">458 ₴</div>
-        </div>
+      <div class="items__no--items">
+        <h2>Ничего не найдено по запросу!</h2>
       </div>
-      <div class="items-wrapper--list">
-        <div class="item">
-          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">
-          <div class="item__name">Прошурро</div>
-          <div class="item__price">458 ₴</div>
-        </div>
-      </div>
-      <div class="items-wrapper--table">
-        <div class="item">
-          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
-          <p class="item__name">Прошурро</p>
-          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
-          <p class="item__calories">445 калорий</p>
-          <p class="item__price">458 ₴</p>
-        </div>
-      </div>
-      <div class="items-wrapper--table">
-        <div class="item">
-          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
-          <p class="item__name">Прошурро</p>
-          <p class="item__ingredients">тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
-          <p class="item__calories">445 калорий</p>
-          <p class="item__price">458 ₴</p>
-        </div>
-      </div>
-      <div class="items-wrapper--table">
-        <div class="item">
-          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
-          <p class="item__name">Прошурро</p>
-          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
-          <p class="item__calories">445 калорий</p>
-          <p class="item__price">458 ₴</p>
-        </div>
-      </div>
+<!--      <div class="items-wrapper&#45;&#45;list">-->
+<!--        <div class="item">-->
+<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
+<!--          <div class="item__name">Прошурро</div>-->
+<!--          <div class="item__price">458 ₴</div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;list">-->
+<!--        <div class="item">-->
+<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
+<!--          <div class="item__name">Прошурро</div>-->
+<!--          <div class="item__price">458 ₴</div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;table">-->
+<!--        <div class="item">-->
+<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
+<!--          <p class="item__name">Прошурро</p>-->
+<!--          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
+<!--          <p class="item__calories">445 калорий</p>-->
+<!--          <p class="item__price">458 ₴</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;table">-->
+<!--        <div class="item">-->
+<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
+<!--          <p class="item__name">Прошурро</p>-->
+<!--          <p class="item__ingredients">тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
+<!--          <p class="item__calories">445 калорий</p>-->
+<!--          <p class="item__price">458 ₴</p>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;table">-->
+<!--        <div class="item">-->
+<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
+<!--          <p class="item__name">Прошурро</p>-->
+<!--          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
+<!--          <p class="item__calories">445 калорий</p>-->
+<!--          <p class="item__price">458 ₴</p>-->
+<!--        </div>-->
+<!--      </div>-->
     </main>
     <footer>
       <div class="footer__inner">
