added switcher between table and list

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
           </ul>
         </div>
       </div>
+      <div class="switch-view">
+        <img id="switch-view__list" src="resources/img/switch--list.png" alt="Switch to list view">
+        <img id="switch-view__table" src="resources/img/switch--table.png" alt="Switch to table view">
+      </div>
     </header>
     
     <aside>
@@ -66,50 +70,50 @@
     </aside>
     
     <main>
-      <div class="items__no--items">
-        <h2>Ничего не найдено по запросу!</h2>
+<!--      <div class="items__no&#45;&#45;items">-->
+<!--        <h2>Ничего не найдено по запросу!</h2>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;list">-->
+<!--        <div class="item">-->
+<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
+<!--          <div class="item__name">Прошурро</div>-->
+<!--          <div class="item__price">458 ₴</div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="items-wrapper&#45;&#45;list">-->
+<!--        <div class="item">-->
+<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
+<!--          <div class="item__name">Прошурро</div>-->
+<!--          <div class="item__price">458 ₴</div>-->
+<!--        </div>-->
+<!--      </div>-->
+      <div class="items-wrapper--table">
+        <div class="item">
+          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
+          <p class="item__name">Прошурро</p>
+          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
+          <p class="item__calories">445 калорий</p>
+          <p class="item__price">458 ₴</p>
+        </div>
       </div>
-<!--      <div class="items-wrapper&#45;&#45;list">-->
-<!--        <div class="item">-->
-<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
-<!--          <div class="item__name">Прошурро</div>-->
-<!--          <div class="item__price">458 ₴</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="items-wrapper&#45;&#45;list">-->
-<!--        <div class="item">-->
-<!--          <img class="item__logo" src="resources/img/logo.png" alt="pizza IMG">-->
-<!--          <div class="item__name">Прошурро</div>-->
-<!--          <div class="item__price">458 ₴</div>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="items-wrapper&#45;&#45;table">-->
-<!--        <div class="item">-->
-<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
-<!--          <p class="item__name">Прошурро</p>-->
-<!--          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
-<!--          <p class="item__calories">445 калорий</p>-->
-<!--          <p class="item__price">458 ₴</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="items-wrapper&#45;&#45;table">-->
-<!--        <div class="item">-->
-<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
-<!--          <p class="item__name">Прошурро</p>-->
-<!--          <p class="item__ingredients">тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
-<!--          <p class="item__calories">445 калорий</p>-->
-<!--          <p class="item__price">458 ₴</p>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--      <div class="items-wrapper&#45;&#45;table">-->
-<!--        <div class="item">-->
-<!--          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">-->
-<!--          <p class="item__name">Прошурро</p>-->
-<!--          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>-->
-<!--          <p class="item__calories">445 калорий</p>-->
-<!--          <p class="item__price">458 ₴</p>-->
-<!--        </div>-->
-<!--      </div>-->
+      <div class="items-wrapper--table">
+        <div class="item">
+          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
+          <p class="item__name">Прошурро</p>
+          <p class="item__ingredients">тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
+          <p class="item__calories">445 калорий</p>
+          <p class="item__price">458 ₴</p>
+        </div>
+      </div>
+      <div class="items-wrapper--table">
+        <div class="item">
+          <img class="item__image" src="resources/img/pizza-img.jpg" alt="pizza IMG">
+          <p class="item__name">Прошурро</p>
+          <p class="item__ingredients">Тунец, креветки, осьминог, кальмар, мидии, лимон, оливки, маслины</p>
+          <p class="item__calories">445 калорий</p>
+          <p class="item__price">458 ₴</p>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer__inner">
