--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="js/site-builder.js" defer></script>
 <script src="js/ingredients.js" defer></script>
 <script src="js/items.js" defer></script>
+<script src="js/item-main-components.js" defer></script>
 <script src="js/building-pipe.js" defer></script>
 </body>
 </html>
