--- a/index-text.html
+++ b/index-text.html
@@ -35,8 +35,8 @@
         </div>
       </div>
       <div class="switch-view">
-        <img id="switch-view__list" src="resources/img/switch--list.png" alt="Switch to list view">
-        <img id="switch-view__table" src="resources/img/switch--table.png" alt="Switch to table view">
+        <img id="switch-view__table" class="switch-view__element" src="resources/img/switch--table.png" alt="Switch to table view">
+        <img id="switch-view__list" class="switch-view__element" src="resources/img/switch--list.png" alt="Switch to list view">
       </div>
     </header>
     
@@ -236,6 +236,94 @@
         </div>
       </div>
     </footer>
+    <div class="bucket">
+      <div class="bucket__info">
+        <div class="bucket__quantity">
+          15
+        </div>
+        <div class="bucket__img">
+          <img src="resources/img/bucket.png" alt="Bucket">
+        </div>
+      </div>
+      <div class="bucket__list">
+        <div class="bucket__list--cards">
+          <div class="bucket__list--item" id="item--1">
+            <div class="bucket-item__delete">❌</div>
+            <div class="bucket-item__img">
+              <img src="resources/img/Джовано.png" alt="Pizza img">
+            </div>
+            <div class="bucket-item__col-3">
+              <div class="bucket-item__name">Прошурро</div>
+              <div class="bucket-item__quantity">
+                <label>кол-во: <input value="1" min="1" max="15" type="number" id="proshurro"></label>
+              </div>
+            </div>
+            <div class="bucket-item__price">555 ₴</div>
+          </div>
+
+          <div class="bucket__list--item" id="item--1">
+            <div class="bucket-item__delete">❌</div>
+            <div class="bucket-item__img">
+              <img src="resources/img/Джовано.png" alt="Pizza img">
+            </div>
+            <div class="bucket-item__col-3">
+              <div class="bucket-item__name">Прошурро</div>
+              <div class="bucket-item__quantity">
+                <label>кол-во: <input value="1" min="1" max="15" type="number" id="proshurro"></label>
+              </div>
+            </div>
+            <div class="bucket-item__price">555 ₴</div>
+          </div>
+
+          <div class="bucket__list--item" id="item--1">
+            <div class="bucket-item__delete">❌</div>
+            <div class="bucket-item__img">
+              <img src="resources/img/Джовано.png" alt="Pizza img">
+            </div>
+            <div class="bucket-item__col-3">
+              <div class="bucket-item__name">Прошурро</div>
+              <div class="bucket-item__quantity">
+                <label>кол-во: <input value="1" min="1" max="15" type="number" id="proshurro"></label>
+              </div>
+            </div>
+            <div class="bucket-item__price">555 ₴</div>
+          </div>
+
+          <div class="bucket__list--item" id="item--1">
+            <div class="bucket-item__delete">❌</div>
+            <div class="bucket-item__img">
+              <img src="resources/img/Джовано.png" alt="Pizza img">
+            </div>
+            <div class="bucket-item__col-3">
+              <div class="bucket-item__name">Прошурро</div>
+              <div class="bucket-item__quantity">
+                <label>кол-во: <input value="1" min="1" max="15" type="number" id="proshurro"></label>
+              </div>
+            </div>
+            <div class="bucket-item__price">555 ₴</div>
+          </div>
+
+          <div class="bucket__list--item" id="item--1">
+            <div class="bucket-item__delete">❌</div>
+            <div class="bucket-item__img">
+              <img src="resources/img/Джовано.png" alt="Pizza img">
+            </div>
+            <div class="bucket-item__col-3">
+              <div class="bucket-item__name">Прошурро</div>
+              <div class="bucket-item__quantity">
+                <label>кол-во: <input value="1" min="1" max="15" type="number" id="proshurro"></label>
+              </div>
+            </div>
+            <div class="bucket-item__price">555 ₴</div>
+          </div>
+        </div>
+
+        <div class="bucket__order">
+          <span class="order-sum-price">1555 ₴</span>
+          <button class="active-btn order-btn">Заказать!</button>
+        </div>
+      </div>
+    </div>
   </div>
 
 <!--  <div class="layout-menu__container">-->
