--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles-text.css">
 </head>
 <body>
 <script src="js/content.js" defer></script>
@@ -16,6 +16,8 @@
 <script src="js/page-components.js" defer></script>
 <script src="js/site-builder.js" defer></script>
 <script src="js/item-main-components.js" defer></script>
+<script src="js/storage.js" defer></script>
 <script src="js/building-pipe.js" defer></script>
+<script src="js/bucket.js" defer></script>
 </body>
 </html>
