implemented local storage

--- a/index-text.html
+++ b/index-text.html
@@ -154,6 +154,7 @@
             <p class="item__calories">445 ккал</p>
             <p class="item__price">458 ₴</p>
           </div>
+          <button class="active-btn item-order">🛒</button>
           <div class="reverse-btn" id="reverseCard">↻</div>
         </div>
       </div>
