added default picture

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
 <script src="js/content.js" defer></script>
+<script src="js/utils.js" defer></script>
 <script src="js/ingredients.js" defer></script>
 <script src="js/items.js" defer></script>
 <script src="js/storage.js" defer></script>
