added pizza Redactor

--- a/index-text.html
+++ b/index-text.html
@@ -326,6 +326,9 @@
       </div>
     </div>
   </div>
+  <div class="create-item">
+
+  </div>
 
 <!--  <div class="layout-menu__container">-->
 <!--    <div class="layout-menu">-->
