--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <script src="js/site-builder.js" defer></script>
 <script src="js/item-main-components.js" defer></script>
 <script src="js/bucket.js" defer></script>
+<script src="js/custom-creator.js" defer></script>
 <script src="js/building-pipe.js" defer></script>
 </body>
 </html>
